fixed desktop breakpoint p element spacing

--- a/styles.css
+++ b/styles.css
@@ -292,7 +292,7 @@ section {
 
   #third-p {
     position: relative;
-    top: -2em;
+    top: 0em;
     max-width: 39%;
   }
   #testimonials-img1 {
